getScanners API working with Help!

--- a/jmvc/seccubus/scanner/select/select.html
+++ b/jmvc/seccubus/scanner/select/select.html
@@ -21,7 +21,7 @@
         </script>
 		<script type='text/javascript'>
 			steal(	'seccubus/scanner/select',
-				'seccubus/fixtures',
+			//	'seccubus/fixtures',
 			function(){
 				
 				$('#select1').seccubus_scanner_select();
