Backend integration of edit workspace

--- a/jmvc/seccubus/workspace/table/table.html
+++ b/jmvc/seccubus/workspace/table/table.html
@@ -18,7 +18,7 @@
         </script>
 		<script type='text/javascript'>
 			steal(	
-				'seccubus/fixtures',
+				//'seccubus/fixtures',
 				'seccubus/workspace/table',
 				'seccubus/workspace/edit',
 				'seccubus/seccubus.css',
