workspace table now handles insertions the way it should

--- a/jmvc/seccubus/workspace/table/table.html
+++ b/jmvc/seccubus/workspace/table/table.html
@@ -34,10 +34,10 @@
 
 				$('#create').click(function(){
 					new Seccubus.Models.Workspace({
-						id :            "9999",
-						Name :          "Client 9999",
-						ScanCount :     "9999",
-						LastScan :      "2099-09-09 09:09:09"
+						name :          "Client 9999",
+						scanCount :     "9999",
+						findCount :     "9999",
+						lastScan :      "2099-09-09 09:09:09"
 					}).save();
 				})
 
