--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -64,7 +64,7 @@
 	   <form id='finding_bulkedit'>Bulk update will go here</form>
 	   <br>
 	   <table id='finding_table'>
-	     <tr><td>Datatable with findings will go here</td></tr>
+	     <tr><td>Table with findings will go here</td></tr>
 	   </table>
 	 </div>
        </div>
@@ -80,11 +80,7 @@
 	 </div>
 	 <div class='main'>
 	   <table id='issue_table'>
-	     <thead> <tr> <th>a</th> <th>b</th> <th>c</th> </tr> </thead>
-	     </tbody> <tr> <th>1</th> <th>3</th> <th>a</th> </tr>
-	       <tr> <th>2</th> <th>2</th> <th>b</th> </tr>
-	       <tr> <th>3</th> <th>1</th> <th>c</th> </tr>
-	     </tbody>
+	     <tr><td>Issue table will go here</td></tr>
 	   </table>
 	 </div>
        </div>
