Make the stealing of modal.css explicit rather then implicit

--- a/jmvc/widgets/modal/modal.html
+++ b/jmvc/widgets/modal/modal.html
@@ -20,7 +20,9 @@
                 src='../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
-			steal('widgets/modal',function(){
+			steal(	'widgets/modal',
+				'widgets/modal/modal.css',
+			function(){
 				
 				$('#h1').click( function() {
 					$('#modal').widgets_modal({
