#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right of UI do nothing https://sourceforge.net/apps/trac/seccubus/ticket/67#67 - Links in top right o

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -13,7 +13,8 @@
           <h1><a href="#">Seccubus</a></h1>
 	  <h2>Automated vulnerability scanning and reporting</h2>
 	  <nav id="top-nav">
-	     <a href="#">Settings</a> <span> | </span> <ahref="#">Help</a>
+	     <!-- Ticket 67 - Links in top right of UI do nothing -->
+	     <!-- <a href="#">Settings</a> <span> | </span> <ahref="#">Help</a> -->
 	   </nav>
 	 </div>
 	 <div id="header-bottom">
