Clarified the use of certain GUI elements in the GUI

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -56,12 +56,15 @@
 	   </select>
 	 </div>
 	 <div class=main>
+	   <h2>Show findings with this status:</h2>
 	   <div id='status_buttons'>
 	     Status buttons will go here
 	   </div>
 	   <br>
+	   <h2>Filter findings:</h2>
 	   <div id='filters'>Filters will go here</div>
 	   <br>
+	   <h2>Update selected findings:</h2>
 	   <form id='finding_bulkedit'>Bulk update will go here</form>
 	   <br>
 	   <table id='finding_table'>
