Edit findings integrated into seccubus.js

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -149,6 +149,11 @@
          Room for modal editScan
        </form>
      </div>
+     <div id="editFindingDialog" class='hidden'>
+       <form id="editFinding">
+         Room for modal editFinding
+       </form>
+     </div>
      <div id="modalDialog">
      </div>
      <!-- Get the javascript out -->
