--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -21,6 +21,7 @@
 	   <nav id="main-nav">
 	     <ul id='navTab'>
 	       <li><a href="#up2date">Status</a></li>
+	       <li><a href="#runs">Runs</a></li>
 	       <li><a href="#findings">Findings</a></li>
 	       <li><a href="#issues">Issues</a></li>
 	       <li><a href="#workspaces">Manage Workspaces</a></li>
@@ -40,6 +41,27 @@
 	   <br>&nbsp;
            <div id='config_items'>Coniguration items test go here</div>
 	 </div>
+       </div>
+
+       <div id='runs' class='tab'>
+        <div class='left'>
+	 Workspace (<a href='javascript://' class='addWorkspace'>add</a>):<br>
+	 <select class='left workspaceSelector' id='workspace_selector_findings'>
+	  <option>Workspace selector</option>
+	  <option>----</option>
+	  <option>This is where we load the workspace selector</option>
+	 </select>
+	 <br>Scans (<a href='javascript://' disabled=true class='addScan'>add</a>):<br>
+	 <select class='left scanSelector' id='scan_selector_runs' size=20>
+	  <option>Select a workspace to start</option>
+	 </select>
+	</div>
+	<div class='main'>
+	 <h1>Runs for this scan:</h1>
+	 <table id='run_table'>
+	 	<tr><th>Time</th><th>Attachments</th></tr>
+	</table>
+	</div>
        </div>
 
        <div id='findings' class='tab'>
