Updated spelling errors

--- a/scanners/Nikto/help.html
+++ b/scanners/Nikto/help.html
@@ -13,8 +13,8 @@ This scanner takes the following parameters:
 <p>
 Subsitutions:
 <ul>
-	<li>$HOSTS is subsituted with the contents of the host field
-	<li>@HOSTS is subsituted with the path of a file containig the hosts field
-	<li>$WORSKPACE is subsituted with the workspace name
+	<li>$HOSTS is substituted with the contents of the host field
+	<li>@HOSTS is substituted with the path of a file containig the hosts field
+	<li>$WORSKPACE is substituted with the workspace name
 	<li>$SCAN is substituted with the scan name
 </ul>
