--- a/scanners/Nmap/help.html
+++ b/scanners/Nmap/help.html
@@ -4,7 +4,7 @@ This scanner takes the following parameters:
 		<br>You can use this optional parameter to provide the script with
 (-p)		  the path to nmap. If you do not provide this the 
 		  script tries to find the files itself and fail if it cannot 
-		  fidn them.
+		  find them.
 	<li>--nmap_options (-o)	
 		<br>Additional command line options to provide to Nmap see 
 (-o)		  'nmap -Help' for more information.
@@ -14,8 +14,8 @@ This scanner takes the following parameters:
 <p>
 Substitutions:
 <ul>
-	<li>$HOSTS is subsituted with the contents of the host field
-	<li>@HOSTS is subsituted with the path of a file containig the hosts field
-	<li>$WORSKPACE is subsituted with the workspace name
+	<li>$HOSTS is substituted with the contents of the host field
+	<li>@HOSTS is substituted with the path of a file containig the hosts field
+	<li>$WORSKPACE is substituted with the workspace name
 	<li>$SCAN is substituted with the scan name
 </ul>
