--- a/jmvc/seccubus/notification/create/create.html
+++ b/jmvc/seccubus/notification/create/create.html
@@ -5,6 +5,7 @@
 		<title>Seccubus.Notification.Create</title>
         <style type='text/css'>
             body {font-family: verdana}
+	    .nok {background-color: red}
         </style>
 	</head>
 	<body>
@@ -15,11 +16,16 @@
                 src='../../../steal/steal.js'>
         </script>
 		<script type='text/javascript'>
-			steal('seccubus/notification/create','seccubus/fixtures',function(){
+			steal(	'seccubus/notification/create',
+				//'seccubus/fixtures',
+			function(){
 				
-				$('#create').seccubus_notification_create();
+				$('#create').seccubus_notification_create({
+					workspace: 100,
+					scan: 1
+				});
 				Seccubus.Models.Notification.bind('created', function(ev, notification){
-					$('<div>').html("<h3>"+notification.name+"</h3><p>"+notification.description+"</p>")
+					$('<div>').html("<h3>"+notification.subject+"</h3><p>"+notification.recipients+"</p>")
 					        .appendTo( $('#notifications') )
 				})
 				
