Integrated notifications into scan table and edit scan screen

--- a/jmvc/seccubus/scan/edit/edit.html
+++ b/jmvc/seccubus/scan/edit/edit.html
@@ -22,7 +22,7 @@
 			steal(	'seccubus/scan/edit',
 				'seccubus/workspace/select',
 				'seccubus/scan/select',
-				'seccubus/fixtures',
+				//'seccubus/fixtures',
 			function(){
 				
 				$("#workspace").seccubus_workspace_select();
