--- a/jmvc/seccubus/scan/table/table.html
+++ b/jmvc/seccubus/scan/table/table.html
@@ -28,7 +28,7 @@
 		<script type='text/javascript'>
 			steal(	'seccubus/scan/table',
 				'seccubus/workspace/select',
-				'seccubus/fixtures',
+				//'seccubus/fixtures',
 			function(){
 				$('#selectWorkspace').seccubus_workspace_select();
 				$('#selectWorkspace').change(function() {
