Edit and delete integrated into gui

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -171,6 +171,12 @@
          Room for modal editScan
        </form>
      </div>
+     <div id="editNotificationDialog" class='hidden'>
+       <h1>Update your notification</h1>
+       <form id="editNotification">
+         Room for modal Edit Notification
+       </form>
+     </div>
      <div id="editFindingDialog" class='hidden wide'>
        <form id="editFinding">
          Room for modal editFinding
