--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -177,6 +177,12 @@
          Room for modal Edit Notification
        </form>
      </div>
+     <div id="createNotificationDialog" class='hidden'>
+       <h1>Enter data</h1>
+       <form id="createNotification">
+         Room for modal create Notification
+       </form>
+     </div>
      <div id="editFindingDialog" class='hidden wide'>
        <form id="editFinding">
          Room for modal editFinding
