--- a/jmvc/seccubus/config_item/list/list.html
+++ b/jmvc/seccubus/config_item/list/list.html
@@ -11,6 +11,12 @@
 	        background-repeat: no-repeat;
 	        background-position: 0.5em;
 	    }
+	    .Warn {
+	        padding-left: 30px;
+	        background-image: url(img/warn.png);
+	        background-repeat: no-repeat;
+	        background-position: 0.5em;
+	    }
 	    .OK {
 	    	padding-left: 30px;
 		background-image: url(img/ok.png);
@@ -28,7 +34,9 @@
         </script>
 		<script type='text/javascript'>
 			//steal('seccubus/config_item/list',function(){
-			steal('seccubus/config_item/list','seccubus/fixtures',function(){
+			steal('seccubus/config_item/list',
+			//	'seccubus/fixtures',
+			function(){
 				
 				$('#config_items').seccubus_config_item_list();
 				
