Edit and create scan dialog now show default options Fixes: #43 #42 #34 and #9

--- a/scanners/Nessus/help.html
+++ b/scanners/Nessus/help.html
@@ -3,6 +3,7 @@ This scanner takes the following parameters:
 	<li>--user (-u)	  <br> Nessus username
 	<li>--password (-p)	  <br> Nessus password
 	<li>--server (-s)	  <br> Nessus server (ip or name)
+	<li>--port		<br> Nessus server port
 	<li>--policy	  <br> Name of Nessus policy
 	<li>--hosts		  <br> Specification of hosts to scan. Follows the Nessus rules for specifying hosts, or path to a file containing such specification
 </ul>
