--- a/scanners/NessusLegacy/help.html
+++ b/scanners/NessusLegacy/help.html
@@ -4,7 +4,7 @@ This scanner takes the following parameters:
 		<br>Optional path of the nessus (client) binary. If it is not
 		     provided the script will try to find it for you
 	<li>--user (-u)	  <br> Nessus username
-	<li>--password (-p)	  <br> Nessus password
+	<li>--password (--pw)	  <br> Nessus password
 	<li>--server (-s)	  <br> Nessus server (ip or name)
 	<li>--rc		   
 		<br>Path of the .nessusrc file to use
