--- a/scanners/Nmap/help.html
+++ b/scanners/Nmap/help.html
@@ -10,6 +10,8 @@ This scanner takes the following parameters:
 (-o)		  'nmap -Help' for more information.
 	<li>--hosts		  
 		<br> Specification of hosts to scan. Follows the Nessus rules for specifying hosts, or path to a file containing such specification
+	<li>--sudo
+		<br>Use sudo to elevate privileges (needed for certain scans)
 </ul>
 <p>
 Substitutions:
