Fixes #64. Title was wrong in new scan dialog

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -175,7 +175,7 @@ limitations under the License.
        </form>
      </div>
      <div id="createScanDialog" class='hidden'>
-       <h1>Please provide the details for a new workspace</h1>
+       <h1>Please provide the details for a new scan</h1>
        <form id="createScan">
          Room for modal createScan
        </form>
