Findings filter for table now gets processed in the backend Should give improved speed

--- a/jmvc/seccubus/finding/table/table.html
+++ b/jmvc/seccubus/finding/table/table.html
@@ -53,7 +53,7 @@ limitations under the License.
 			steal(	'seccubus/finding/table',
 				'seccubus/workspace/select',
 				'seccubus/scan/select',
-				'seccubus/fixtures',
+			//	'seccubus/fixtures',
 			function(){
 				var gui_state=new Seccubus.GuiState({
 					workspace       : -1
