Moved as much stuff to backend without writing the getFilters.json API

--- a/jmvc/seccubus/finding/filter/filter.html
+++ b/jmvc/seccubus/finding/filter/filter.html
@@ -51,7 +51,7 @@ limitations under the License.
 			steal(	'seccubus/finding/filter',
 				'seccubus/workspace/select',
 				'seccubus/scan/select',
-				'seccubus/fixtures',
+				//'seccubus/fixtures',
 			function(){
 				var gui_state=new Seccubus.GuiState({
 					workspace       : -1
