Fixes #99 - The ability to remote is not reflected in the scanner help text

--- a/scanners/Medusa/help.html
+++ b/scanners/Medusa/help.html
@@ -24,7 +24,11 @@ This scanner takes the following parameters:
 		<br>Additional command line options to provide to Medusa see 
 (-o)		  Medusa manual for more information.
 	<li>--hosts		  
-		<br> Specification of hosts to scan. Follows the Medusa rules for specifying hosts, or path to a file containing such specification
+		<br> Specification of hosts to scan. Follows the Medusa rules for specifying 
+		hosts, or path to a file containing such specification
+	<li>--remote (-r)
+		<br>Option comma separed list of hostname, username, and key path used to ssh
+		to the host and run the command there
 </ul>
 <p>
 Substitutions:
