--- a/scanners/Nikto/help.html
+++ b/scanners/Nikto/help.html
@@ -23,7 +23,12 @@ This scanner takes the following parameters:
 	<li>--nikto_options	 (-o)
 		<br>Additional command line options to provide to nikto see 
 (-o)		  'nikto -Help' for more information.
-	<li>--hosts		  <br> Specification of hosts to scan. Follows the Nessus rules for specifying hosts, or path to a file containing such specification
+	<li>--hosts
+		<br> Specification of hosts to scan. Follows the Nessus rules for specifying 
+		hosts, or path to a file containing such specification
+	<li>--remote (-r)
+		<br>Option comma separed list of hostname, username, and key path used to ssh
+		to the host and run the command there
 </ul>
 <p>
 Subsitutions:
