--- a/scanners/Nmap/help.html
+++ b/scanners/Nmap/help.html
@@ -27,6 +27,10 @@ This scanner takes the following parameters:
 		<br> Specification of hosts to scan. Follows the Nessus rules for specifying hosts, or path to a file containing such specification
 	<li>--sudo
 		<br>Use sudo to elevate privileges (needed for certain scans)
+	<li>--remote (-r)
+		<br>Option comma separed list of hostname, username, and key path used to ssh
+		to the host and run the command there
+
 </ul>
 <p>
 Substitutions:
