--- a/scanners/Skipfish/help.html
+++ b/scanners/Skipfish/help.html
@@ -23,7 +23,11 @@ This scanner takes the following parameters:
 	<li>--skipfish_options	 (-o)
 		<br>Additional command line options to provide to Skipfish see 
 (-o)		  'skipfish -h' for more information.
-	<li>--host		  <br> Specification of host to scan. Can only scan one host at the time.
+	<li>--host		  
+		<br> Specification of host to scan. Can only scan one host at the time.
+	<li>--remote (-r)
+		<br>Option comma separed list of hostname, username, and key path used to ssh
+		to the host and run the command there
 </ul>
 <p>
 Subsitutions:
