Fixes #67 - -o usage needs to be more specific for e.g. nikto and nmap scanner

--- a/scanners/Medusa/help.html
+++ b/scanners/Medusa/help.html
@@ -22,7 +22,8 @@ This scanner takes the following parameters:
 		  find them.
 	<li>--medusa_options (-o)	
 		<br>Additional command line options to provide to Medusa see 
-(-o)		  Medusa manual for more information.
+(-o)		  Medusa manual for more information. Please quote the options so that they are
+		  passed as a single block. E.g. -o '-option1 -option2'
 	<li>--hosts		  
 		<br> Specification of hosts to scan. Follows the Medusa rules for specifying 
 		hosts, or path to a file containing such specification
