--- a/scanners/Nikto/help.html
+++ b/scanners/Nikto/help.html
@@ -22,7 +22,8 @@ This scanner takes the following parameters:
 		  find them.
 	<li>--nikto_options	 (-o)
 		<br>Additional command line options to provide to nikto see 
-(-o)		  'nikto -Help' for more information.
+(-o)		  'nikto -Help' for more information. Please quote the options so that they are
+                  passed to Nikto as a single block. E.g. -o '--port 80,443 --ssl'
 	<li>--hosts
 		<br> Specification of hosts to scan. Follows the Nessus rules for specifying 
 		hosts, or path to a file containing such specification
