--- a/scanners/SSLyze/help.html
+++ b/scanners/SSLyze/help.html
@@ -22,7 +22,9 @@ This scanner takes the following parameters:
 		find them.
 	<li>--sslyze_options (-o)	
 		<br>- Additional command line options to provide to sslyze see 
-		'sslyze.py --help' for more information.
+		'sslyze.py --help' for more information. Please quote the options so that they
+		are passed as a single block. E.g. -o '-option1 -option2'
+
 	<li>--hosts
 		<br>- The file containing the 'hosts' to scan
 </ul>
