--- a/scanners/Skipfish/help.html
+++ b/scanners/Skipfish/help.html
@@ -22,7 +22,8 @@ This scanner takes the following parameters:
 		  find them.
 	<li>--skipfish_options	 (-o)
 		<br>Additional command line options to provide to Skipfish see 
-(-o)		  'skipfish -h' for more information.
+(-o)		  'skipfish -h' for more information. Please quote the options so that they are
+                  passed as a single block. E.g. -o '-option1 -option2'
 	<li>--host		  
 		<br> Specification of host to scan. Can only scan one host at the time.
 	<li>--remote (-r)
