--- a/scanners/Nmap/help.html
+++ b/scanners/Nmap/help.html
@@ -22,7 +22,8 @@ This scanner takes the following parameters:
 		  find them.
 	<li>--nmap_options (-o)	
 		<br>Additional command line options to provide to Nmap see 
-(-o)		  'nmap -Help' for more information.
+(-o)		  'nmap -Help' for more information. Please quote the options so that they are
+                  passed to Nikto as a single block. E.g. -o '-sS -Pn'
 	<li>--hosts		  
 		<br> Specification of hosts to scan. Follows the Nessus rules for specifying hosts, or path to a file containing such specification
 	<li>--sudo
