changed default and help texts

--- a/scanners/Nessus/help.html
+++ b/scanners/Nessus/help.html
@@ -13,10 +13,10 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<b>Attention!:</b> Password parameter option '-p' is automatically filled in by what is entered in the password field<p><br />
 This scanner takes the following parameters:
 <ul>
 	<li>--user (-u)	  <br> Nessus username
-	<li>--password (-p)	  <br> Nessus password
 	<li>--server (-s)	  <br> Nessus server (ip or name)
 	<li>--port		<br> Nessus server port
 	<li>--policy	  <br> Name of Nessus policy
