--- a/scanners/NessusLegacy/help.html
+++ b/scanners/NessusLegacy/help.html
@@ -13,13 +13,13 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+<b>Attention!:</b> Password parameter option '--pw' is automatically filled in by what is entered in the password field<p><br />
 This scanner takes the following parameters:
 <ul>
 	<li>--nessus_path (-p) 
 		<br>Optional path of the nessus (client) binary. If it is not
 		     provided the script will try to find it for you
 	<li>--user (-u)	  <br> Nessus username
-	<li>--password (--pw)	  <br> Nessus password
 	<li>--server (-s)	  <br> Nessus server (ip or name)
 	<li>--rc		   
 		<br>Path of the .nessusrc file to use
