Added notifs and custom sql

--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -43,6 +43,7 @@ limitations under the License.
 	       <li><a href="#scans">Manage Scans</a></li>
 	       <li><a href="#reports">Reports</a></li>
 	       <li><a href="#assets">Manage Assets</a></li>
+         <li><a href="#custSQL">Custom SQL</a></li>
 	     </ul>
 	   </nav>
 	 </div>
@@ -159,11 +160,22 @@ limitations under the License.
 	 </div>
        </div>
 
-       <div id='reports' class='tab'>
-         <div class='full'>
+   <div id='reports' class='tab'>
+     <div class='full'>
 	   The Reports will go here
-	 </div>
-       </div>
+  	 </div>
+   </div>
+
+   <div id='custSQL' class='tab'>
+     <div class='full'>
+     <h1>Run custom SQL bellow</h1>
+     <span id='custSQL_table'>
+           <table>
+      <tr><td>SQL table goes here</td></tr>
+     </table>
+      </span>
+     </div>
+   </div>
 
        <div id='assets' class='tab'>
        <div class='left'>
@@ -181,7 +193,7 @@ limitations under the License.
 	   	<tr><td>Asset table goes here</td></tr>
 	   </table>
 	 </div>
-       </div>
+  </div>
 
      </div>
      <!-- This is where the modal diaglog windows live -->
