--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@ layout: default
     <div class="callout-container">
         <div class="callout">
             <h2>Seccubus</h2>
-            <h3 class="subheader">Seccubus automates regular vulnerability scans with Nessus and OpenVAS and provides delta reporting</h3>
+            <h3 class="subheader">Seccubus automates vulnerability scanning with: Nessus, 
+	    	OpenVAS, NMap, SSLyze, Burp and SSLlabs
+	    </h3>
             <br/>
             <a href="/documentation/" class="button small">Get started</a>
         </div>
