--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@ layout: default
     <div class="callout-container">
         <div class="callout">
             <h2>Seccubus</h2>
-            <h3 class="subheader">Seccubus automates regular vulnerability scans with Nessus and OpenVAS and provides delta reporting</h3>
+            <h3 class="subheader">Seccubus automates regular vulnerability scanning with:
+	    <ul>
+	    	<li>Nessus
+		<li>OpenVAS
+		<li>NMap
+		<li>SSLyze
+		<li>Burp
+		<li>SSLlabs
+	    </ul>
+	    </h3>
             <br/>
             <a href="/documentation/" class="button small">Get started</a>
         </div>
