Different button text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 	    	OpenVAS, NMap, SSLyze, Burp and SSLlabs
 	    </h3>
             <br/>
-            <a href="/documentation/" class="button small">Get started</a>
+            <a href="/documentation/" class="button small">Learn more</a>
         </div>
     </div>
 </section>
