--- a/scanners/Medusa/help.html
+++ b/scanners/Medusa/help.html
@@ -1,5 +1,5 @@
 <!--
-Copyright 2014 Frank Breedijk, Dan McGinn-Combs
+Copyright 2014 Alex Smirnoff, Frank Breedijk
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
