--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
         <p>Seccubus runs vulnerability scans at regular intervals and compares the findings of 
 	the last scan with the findings of the previous scan. The delta of this scan is 
 	presented in a web GUI where findings can be easily marked as either real findings or 
-	non-issues. Non issues get ignored until they change. This causes a dramatically 
-	reduction a analysis time.</p>
+	non-issues. Non issues get ignored until they change. This causes a dramatic 
+	reduction in analysis time.</p>
     </div>
 </section>
