--- a/index.html
+++ b/index.html
@@ -31,4 +31,7 @@ layout: default
 	non-issues. Non issues get ignored until they change. This causes a dramatic 
 	reduction in analysis time.</p>
     </div>
+    <div class="bla">
+       bla
+    </div>
 </section>
