--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ layout: default
 	non-issues. Non issues get ignored until they change. This causes a dramatic 
 	reduction in analysis time.</p>
     </div>
+</section>
+<section class="main-content">
     <div class="bla">
        bla
     </div>
-</section>
+<section class="main-content">
