--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
             {% for post in site.posts %}
 		{% if forloop.index <= 10 %} 
 	            <li>
-		        <a href="{{ post.url }}">{{ post.title }}</a>
+		        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 		    </li>
 		{% endif %}
             {% endfor %}
