--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 	reduction in analysis time.
 	
 	Before the results of a vulnerability scan are imported into Seccubus they are first 
-	converted to the Intermediate Vulnerability Information Language (IVIL) format, to make
+	converted to the Intermediate Vulnerability Information Language (IVIL) format to make
 	sure Seccubus can work with many different scanners</p>
     </div>
     <div class="how">
