--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
     <div class="callout-container">
         <div class="callout">
             <h2>Seccubus</h2>
-            <h3 class="subheader">Seccubus automates vulnerability scanning with: Nessus, 
-	    	OpenVAS, NMap, SSLyze, Burp, SkipFish and SSLlabs
+            <h3 class="subheader">Seccubus automates vulnerability scanning with: 
+	    	Nessus, OpenVAS, NMap, SSLyze, Burp, Medusa, SkipFish and SSLlabs
 	    </h3>
             <br/>
             <a href="/documentation/" class="button small">Learn more</a>
