Added configuration option showResults

--- a/scanners/SSLlabs/help.html
+++ b/scanners/SSLlabs/help.html
@@ -17,6 +17,8 @@ This scanner takes the following parameters:
 <ul>
 	<li>--hosts
 		<br>- The file containing the 'hosts' to scan
+	<li>--showresults
+		<br>- Show's results of the scan in the recent scans on the mainpage of SSLlabs
 </ul>
 You must use --hosts @HOSTS
 <p>
