Update jspm packages and improve sidenav

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,7 +1,7 @@
 <div layout="column" layout-fill>
 	<nav-bar></nav-bar>
 
-	<div layout="row" layout-fill flex>
+	<div layout="row" layout-fill flex style="position: relative">
 	  	<nav-menu layout="column"></nav-menu>
 
 	  	<md-content ui-view flex></md-content>
