Added grunt watchsync and build to the project

--- a/frontend/prod.html
+++ b/frontend/prod.html
@@ -1,13 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<script src="jspm_packages/babel-polyfill.js"></script>
-	<script src="jspm_packages/system.js"></script>
-	<script src="config/jspm-config.js"></script>
+	<script src="polyfill.js"></script>
 	<script src="app.js"></script>
-	<script>
-		System.import('src/app');
-	</script>
 </head>
 <body><ui-view class="page-host"></ui-view></body>
 </html>
