--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,4 +1,9 @@
 <div layout="column" layout-fill>
+	<h1 class="page-title">
+		Seccubus
+		<h2>Automated vulnerability scanning and reporting</h2>
+	</h1>
+	
 	<nav-bar></nav-bar>
 
 	<div layout="row" layout-fill flex style="position: relative">
