Added title tot he app

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
 	<script>
 		System.import('src/app');
 	</script>
+	<link rel="stylesheet" type="text/css" href="build/app.css">
 </head>
 <body><ui-view class="page-host"></ui-view></body>
 </html>
