--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 	<script src="jspm_packages/system.js"></script>
 	<script src="config/jspm-config.js"></script>
 	<script>
-		System.import('src/app');
+		System.import('src/seccubus');
 	</script>
 	<link rel="stylesheet" type="text/css" href="build/app.css">
 </head>
