Add table component and workspaces list

--- a/frontend/src/seccubus.html
+++ b/frontend/src/seccubus.html
@@ -1,20 +1,17 @@
 <div layout="column" layout-fill>
-	<h1 class="page-title">
-		Seccubus
-		<span>Automated vulnerability scanning and reporting</span>
-	</h1>
+    <h1 class="page-title">
+        Seccubus
+        <span>Automated vulnerability scanning and reporting</span>
+    </h1>
 
-	<nav-bar></nav-bar>
+    <nav-bar></nav-bar>
 
-	<div layout="row" layout-fill flex style="position: relative">
-	  	<nav-menu layout="column"></nav-menu>
+    <div layout="row" layout-fill flex style="position: relative">
+        <nav-menu layout="column"></nav-menu>
 
-	  	<md-content ui-view flex></md-content>
+        <md-content ui-view flex></md-content>
 
-		<md-sidenav
-			md-component-id="drawer"
-			class="md-sidenav-right"
-			ui-view="drawer">
-		</md-sidenav>
-	</div>
+        <md-sidenav md-component-id="drawer" class="md-sidenav-right" ui-view="drawer">
+        </md-sidenav>
+    </div>
 </div>
