--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
         <div class="callout">
             <h2>Seccubus</h2>
             <h3 class="subheader">Seccubus automates vulnerability scanning with: 
-	    	Nessus, OpenVAS, NMap, SSLyze, Burp, Medusa, SkipFish and SSLlabs
+	    	Nessus, OpenVAS, NMap, SSLyze, Burp, Medusa, SkipFish, OWASP ZAP and SSLlabs
 	    </h3>
             <br/>
             <a href="/documentation/" class="button small">Learn more</a>
