more work on frontend

--- a/frontend/src/seccubus.html
+++ b/frontend/src/seccubus.html
@@ -6,12 +6,9 @@
 
     <nav-bar></nav-bar>
 
-    <div layout="row" layout-fill flex style="position: relative">
+    <div layout="row" layout-fill flex class="page-host">
         <nav-menu layout="column"></nav-menu>
-
-        <md-content ui-view flex></md-content>
-
-        <md-sidenav md-component-id="drawer" class="md-sidenav-right" ui-view="drawer">
-        </md-sidenav>
+        <md-content ui-view flex class="page-content"></md-content>
+        <div ui-view="drawer"></div>
     </div>
 </div>
