--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<base href="/seccubus/v2/">
 	<script src="jspm_packages/system.js"></script>
 	<script src="config/jspm-config.js"></script>
 	<script>
@@ -8,5 +9,5 @@
 	</script>
 	<link rel="stylesheet" type="text/css" href="build/app.css">
 </head>
-<body><ui-view class="page-host"></ui-view></body>
+<body><ui-view></ui-view></body>
 </html>
