--- a/frontend/src/seccubus.html
+++ b/frontend/src/seccubus.html
@@ -1,14 +1,7 @@
-<div layout="column" layout-fill>
-    <h1 class="page-title">
-        Seccubus
-        <span>Automated vulnerability scanning and reporting</span>
-    </h1>
+<nav-bar></nav-bar>
 
-    <nav-bar></nav-bar>
-
-    <div layout="row" layout-fill flex class="page-host">
-        <nav-menu layout="column"></nav-menu>
-        <md-content ui-view flex class="page-content"></md-content>
-        <div ui-view="drawer"></div>
-    </div>
+<div layout="row" class="page-host">
+  <nav-menu layout="column"></nav-menu>
+  <md-content ui-view flex class="page-view"></md-content>
+  <div ui-view="drawer" class="page-drawer"></div>
 </div>
