Improved the UI by having sticky subheaders on each page, better loading indicators.

--- a/frontend/src/seccubus.html
+++ b/frontend/src/seccubus.html
@@ -2,6 +2,6 @@
 
 <div layout="row" class="page-host">
   <nav-menu layout="column"></nav-menu>
-  <md-content ui-view flex class="page-view"></md-content>
+  <div ui-view flex class="page-view"></div>
   <div ui-view="drawer" class="page-drawer"></div>
 </div>
