--- a/jmvc/seccubus/seccubus.html
+++ b/jmvc/seccubus/seccubus.html
@@ -243,7 +243,7 @@ limitations under the License.
        </form>
      </div>
       <div id="createScheduleDialog" class='hidden'>
-       <h1>Update your schedule</h1>
+       <h1>Create new schedule</h1>
        <form id="createSchedule">
          Room for modal Edit Schedule
        </form>
