--- a/scanners/ZAP/help.html
+++ b/scanners/ZAP/help.html
@@ -37,4 +37,5 @@ Substitutions:
 	<li>$WORSKPACE is substituted with the workspace name
 	<li>$SCAN is substituted with the scan name
 	<li>$PASSWORD is substituted with the value in the password field
+	<li>@HOSTS is substituted with the path of a file containig the hosts field
 </ul>
