--- a/jmvc/seccubus/issue/table/table.html
+++ b/jmvc/seccubus/issue/table/table.html
@@ -21,11 +21,18 @@ limitations under the License.
 		<title>Seccubus.Issue.Table Demo</title>
         <style type='text/css'>
             body {font-family: verdana}
+            .collapsed { background: url("img/expand.png") no-repeat scroll right center ; padding-right: 20px;}
+            .expanded { background: url("img/sort_desc.png") no-repeat scroll right center ; padding-right: 20px;}
+            .findings_issue { padding: 5px;}
+            .finding_status_4 { text-decoration: line-through;}
+            .finding_status_5 { text-decoration: line-through;}
+            .finding_status_6 { text-decoration: line-through;}
+            .finding_status_99 { text-decoration: line-through;}
         </style>
 	</head>
 	<body>
 	    <h1>Seccubus.Issue.Table Demo</h1>
-		<table id='issues'></table><br>
+		<div id='issues'></div><br>
 		<a href='javascript://' id='select' workspace='100'>Select workspace 100</a><br>
 		<script type='text/javascript' 
                 src='../../../steal/steal.js'>
@@ -41,7 +48,6 @@ limitations under the License.
 
 				$('#select').click(function(el, ev) {
 					ws = $( this ).attr("workspace");
-					console.log(ws);
 					$('#issues').seccubus_issue_table({
 						workspace : $(this).attr("workspace")
 					});
